--- a/reelstitch/package.json
+++ b/reelstitch/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.1.3",
     "@quasar/vite-plugin": "^1.2.3",
     "nuxt": "3.0.0",
     "sass": "^1.32.12"
