--- a/reelstitch/package.json
+++ b/reelstitch/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.32.12"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.13",
     "@quasar/extras": "^1.15.8",
     "quasar": "^2.10.2"
   }
